--- a/css/style.css
+++ b/css/style.css
@@ -138,3 +138,6 @@ padding: 0 10px;
   margin: 10px;
 	border-bottom: 3px solid #4a4a4a
 }
+.row {
+  margin: 25px 0; /* 25px top and bottom, 0 left and right */
+}
