--- a/css/style.css
+++ b/css/style.css
@@ -59,17 +59,19 @@ a:focus {
   text-decoration: underline;
 }
 .button {
-  background-color: transparent;
-  color: #86438f;
-  text-transform: uppercase;
-  border: 2px solid #86438f;
-	padding: 10px 20px;
-	display: inline-block;
+  display: inline-block;
+  background-color: #ff7f50;
+  color: white;
+  font-weight: 400;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid #994c30;
+  transition-duration: 0.2s;
+  transition-property: opacity;
 }
 .button:hover {
-  background-color: #ff7f50;
-  color: #ffffff;
-	text-decoration: none;
+  opacity: 0.8;
 }
 .container {
   padding: 0 15px;
@@ -79,7 +81,6 @@ header {
    text-align: center;
   padding: 10px 0;
   margin: 10px;
-	border-bottom: 3px solid #4a4a4a;
 	position: relative;
 }
 
@@ -97,7 +98,12 @@ padding: 0 10px;
 .commission{
 padding: 0 10px;
   margin: 10px;
-	border-bottom: 3px solid #4a4a4a;
+	border-bottom: 3px solid #4a4a4a; 
+}
+
+.commmission picture{
+	display: block;
+	margin: 0 5px;
 }
 
 .contact{
@@ -109,6 +115,15 @@ padding: 0 10px;
 padding: 0 10px;
   margin: 10px;
 	border-bottom: 3px solid #4a4a4a;
+	text-align: center;
+}
+.social a{
+	display: inline-block;
+	margin: 0 5px;
+}
+.social svg{
+	width: 50px;
+	hight: auto; 
 }
 .copyright{
 padding: 0 10px;
@@ -118,9 +133,13 @@ padding: 0 10px;
 padding: 0 10px;
   margin: 10px;
 }
+.intro{
+padding-top: 5px;	
+}
 .logo{
-	max-width: 250px;
+	max-width: 200px;
 	box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
+	display: inline-block;
 }
 nav > ol {
   list-style-type: none;
@@ -149,6 +168,84 @@ padding: 0 10px;
 .row {
   margin: 25px 0; /* 25px top and bottom, 0 left and right */
 }
+svg{
+	width: 100%;
+max-width: 100%;
+height: auto;
+}
+@keyframes color-change {
+  from {fill: #434259;}
+  to {fill: #f76414;}
+}
+.wing1{
+	animation-duration: 2s;
+  animation-name: color-change;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
 
+.wing2{
+	animation-duration: 2s;
+  animation-name: color-change;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+@keyframes movement {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
+}
+/* ==============================
+Medium devices (640px and larger)
+================================= */
+@media only screen and (min-width: 640px) {
+	header {
+    text-align: unset;
+    padding: 30px 0 13px;
+  }
 
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 8px;
+  }
+	#hero{
+	text-align: center;
+	}
+	#hero span {
+  display: block;
+}
+	.col-md-6 {
+  width: 50%;
+}
+	[class*="col-"] {
+  float: left;
+}
+	.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+}
+
+/* ==============================
+Large devices (1024px or larger)
+================================= */
+@media only screen and (min-width: 1024px) {
+	.container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+#main {
+  display: block;
+	
+}	
+}
+/* ==============================
+X-large devices (1440px or larger)
+================================= */
+@media only screen and (min-width: 1440px) {
+}
 
