--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 box-sizing: border-box;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4 p {
   line-height: 1.4;
 }
 h1 {
@@ -35,7 +35,10 @@ h4 {
   font-size: 1.35em;
   font-weight: 400;
 }
-
+p{
+	font-size: 1.15em; 
+	font-weight: 400em
+}
 img {
   width: 100%;
 }
@@ -239,9 +242,16 @@ Large devices (1024px or larger)
   margin-right: auto;
 }
 #main {
-  display: block;
-	
-}	
+  display: block;	
+}
+	h4 {
+  font-size: 1.65em;
+  font-weight: 400;
+}
+p{
+	font-size: 1.25em; 
+	font-weight: 400em
+}
 }
 /* ==============================
 X-large devices (1440px or larger)
