--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,31 @@
 @charset "utf-8";
+
 /* CSS Document */
-*{
-	box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
-body {background: #FFCD02}
+
 body {
-  background-color: #FFCD02;
+  background: #ffcd02;
+}
+
+body {
+  background-color: #ffcd02;
   font-family: 'roboto', sans-serif;
-  font-size: 16px; /* Sets the font size to 16px */
-  font-weight: 300; /* Sets the font weight to 300 */
-  line-height: 1.6; /* Sets the line-height to 1.6 * the font-size */
-  color: #000000;
-box-sizing: border-box;
+  font-size: 16px;/* Sets the font size to 16px */
+  font-weight: 300;/* Sets the font weight to 300 */
+  line-height: 1.6;/* Sets the line-height to 1.6 * the font-size */
+  color: #000;
+  box-sizing: border-box;
 }
-logo{
-	max-width: 150px;
+logo {
+  max-width: 150px;
 }
+
 h1, h2, h3, h4 p {
   line-height: 1.4;
 }
+
 h1 {
   font-size: 2.75em;
   font-weight: 700;
@@ -33,36 +40,47 @@ h3 {
   font-size: 1.75em;
   font-weight: 400;
 }
+
 h4 {
   font-size: 1.35em;
   font-weight: 400;
 }
-p{
-	font-size: 1.15em; 
-	font-weight: 400em
+
+p {
+  font-size: 1.15em;
+  font-weight: 400em
 }
+
 img {
   width: 100%;
 }
+
 a {
-  color: #000000;
-  text-decoration: none; /* No underlining */
+  color: #000;
+  text-decoration: none;/* No underlining */
 }
+
 a:hover {
-  color: #6C6A6A;
-  text-decoration: underline; /* Underlining when hovering over a link */
+  color: #6c6a6a;
+  text-decoration: underline;/* Underlining when hovering over a link */
 }
-a:visited { /* visited link */
-  color: #000000;
+
+a:visited {
+  /* visited link */
+  color: #000;
 }
-a:active { /* selected link */
+
+a:active {
+  /* selected link */
   color: #86438f;
 }
+
 a:hover,
 a:focus {
   color: #6c6a6a;
   text-decoration: underline;
 }
+
 .button {
   display: inline-block;
   background-color: #ff7f50;
@@ -75,165 +93,198 @@ a:focus {
   transition-duration: 0.2s;
   transition-property: opacity;
 }
+
 .button:hover {
   opacity: 0.8;
 }
+
 .container {
   padding: 0 15px;
 }
+
 header {
-  background-color: #FFCD02;
-   text-align: center;
+  background-color: #ffcd02;
+  text-align: center;
   padding: 10px 0;
   margin: 10px;
-	position: relative;
+  position: relative;
 }
 
-.slider{
-padding: 0 10px;
+.slider {
+  padding: 0 10px;
   margin: 10px;
-	border-bottom: 3px solid #4a4a4a;
-		
-}
-.grid{
-padding: 0 10px;
-  margin: 10px;
-	border-bottom: 3px solid #4a4a4a;
-}
-.commission{
-padding: 0 10px;
-  margin: 10px;
-	border-bottom: 3px solid #4a4a4a; 
+  border-bottom: 3px solid #4a4a4a;
 }
 
-.commmission picture{
-	display: block;
-	margin: 0 5px;
+.grid {
+  padding: 0 10px;
+  margin: 10px;
+  border-bottom: 3px solid #4a4a4a;
 }
 
-.contact{
-padding: 0 10px;
+.commission {
+  padding: 0 10px;
   margin: 10px;
-	border-bottom: 3px solid #4a4a4a;
+  border-bottom: 3px solid #4a4a4a;
 }
-.social{
-padding: 0 10px;
+
+.commmission picture {
+  display: block;
+  margin: 0 5px;
+}
+
+.contact {
+  padding: 0 10px;
   margin: 10px;
-	border-bottom: 3px solid #4a4a4a;
-	text-align: center;
+  border-bottom: 3px solid #4a4a4a;
 }
-.social a{
-	display: inline-block;
-	margin: 0 5px;
+
+.social {
+  padding: 0 10px;
+  margin: 10px;
+  border-bottom: 3px solid #4a4a4a;
+  text-align: center;
 }
-.social svg{
-	width: 50px;
-	hight: auto; 
+
+.social a {
+  display: inline-block;
+  margin: 0 5px;
 }
-.copyright{
-padding: 0 10px;
+
+.social svg {
+  width: 50px;
+  hight: auto;
+}
+
+.copyright {
+  padding: 0 10px;
   margin: 10px;
 }
-.email{
-padding: 0 10px;
+
+.email {
+  padding: 0 10px;
   margin: 10px;
 }
-.intro{
-padding-top: 5px;	
+
+.intro {
+  padding-top: 5px;
 }
-.logo{
-	max-width: 200px;
-	box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
-	display: inline-block;
-	float: left;
+
+.logo {
+  max-width: 200px;
+  box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
+  display: inline-block;
+  float: left;
 }
-nav > ol {
+
+nav>ol {
   list-style-type: none;
   padding: 0;
-	margin: 0;
+  margin: 0;
 }
+
 .navtoggle li:not(:last-child) {
   display: none;
 }
-.navtoggle, .navtoggle.responsive {
+
+.navtoggle .navtoggle.responsive {
   position: relative;
 }
+
 .navtoggle li .icon {
   position: absolute;
   right: 0;
   top: 2px;
   font-size: 20px;
-	padding-right: 0;
+  padding-right: 0;
 }
-.navtoggle.responsive li  {
+
+.navtoggle.responsive li {
   display: block;
 }
+
 .navtoggle.responsive nav {
   padding: 24px 0 0;
 }
+
 .navtoggle.responsive ol {
-	clear: both;
-	padding-top: 20px;
-}
-.navtoggle.responsive li  {
-  display: block;
-  padding: 10px 0;
-  border-top: 1px solid rgba(255,127,80,0.5);
+  clear: both;
+  padding-top: 20px;
 }
 
-.navtoggle.responsive li:last-child  {
+.navtoggle.responsive li {
+  display: block;
+  padding: 10px 0;
+  border-top: 1px solid rgba(255, 127, 80, 0.5);
+}
+
+.navtoggle.responsive li:last-child {
   padding: 0 0 10px;
 }
+
 nav > ol > li > a {
   padding: 0 10px;
   text-transform: uppercase;
   font-weight: 700;
   color: #4a4a4a;
 }
+
 #hero {
-  background-color: #FFCD02;
+  background-color: #ffcd02;
   padding: 20px 0;
   display: inline-block;
   width: 100%;
 }
-.blue{
-padding: 0 10px;
+
+.blue {
+  padding: 0 10px;
   margin: 10px;
-	border-bottom: 3px solid #4a4a4a;
+  border-bottom: 3px solid #4a4a4a;
 }
+
 .row {
-  margin: 25px 0; /* 25px top and bottom, 0 left and right */
+  margin: 25px 0;/* 25px top and bottom, 0 left and right */
 }
-svg{
-	width: 100%;
-max-width: 100%;
-height: auto;
+
+svg {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
 }
+
 @keyframes color-change {
-  from {fill: #434259;}
-  to {fill: #f76414;}
+  from {
+    fill: #434259;
+  }
+
+  to {
+    fill: #f76414;
+  }
 }
-.wing1{
-	animation-duration: 2s;
+
+.wing1 {
+  animation-duration: 2s;
   animation-name: color-change;
   animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-timing-function: linear;
 }
 
-.wing2{
-	animation-duration: 2s;
+.wing2 {
+  animation-duration: 2s;
   animation-name: color-change;
   animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-timing-function: linear;
 }
+
 .left {
   width: calc(60% - (.5em + 6px));
   float: left;
   min-height: 400px;
   margin-top: 1em;
 }
+
 .right {
   width: calc(40% - (.5em + 6px));
   float: right;
@@ -241,7 +292,9 @@ height: auto;
   margin-top: 1em;
 }
 
-* {box-sizing:border-box}
+* {
+  box-sizing: border-box
+}
 
 /* Slideshow container */
 .slideshow-container {
@@ -256,7 +309,7 @@ height: auto;
 }
 
 /* Next & previous buttons */
-.prev, .next {
+.prev .next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -279,7 +332,7 @@ height: auto;
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Caption text */
@@ -325,125 +378,128 @@ height: auto;
   animation-name: fade;
   animation-duration: 1.5s;
 }
-.containerr{
-  display:grid;
-  grid-template-columns: repeat(6,1fr);
-  grid-auto-rows:100px 300px;
-  grid-gap:10px;
-  grid-auto-flow:dense;
+
+.containerr {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: 100px 300px;
+  grid-gap: 10px;
+  grid-auto-flow: dense;
 }
 
-.gallery-item{
-  width:100%;
-  height:100%;
-  position:relative;
+.gallery-item {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
-.gallery-item .images{
-  width:100%;
-  height:100%;
-  overflow:hidden
+.gallery-item .images {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
-
 /* object-fit allows the element to re-size itself. object-position sets the elemnt to focus on the center of the image instead of the default top left*/
-.gallery-item .images img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
+.gallery-item .images img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   object-position: 50% 50%;
   cursor: pointer;
-  transition:.5s ease-in-out;
+  transition: .5s ease-in-out;
 }
 
-.gallery-item:hover .images img{
+.gallery-item:hover .images img {
   overflow: hidden;
 }
 
-.gallery-item .title{
-  opacity:0;
+.gallery-item .title {
+  opacity: 0;
   position: absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
-    color:#fff;
-  font-size:20px;
-  pointer-events:none;
-  z-index:4;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 20px;
+  pointer-events: none;
+  z-index: 4;
   transistion: .3s ease-in-out;
   -webkit-backdrop-filter: blur(5px) saturate(1.8);
   backdrop-filter: blur(5px) saturate(1.8);
-   max-width: 80%;
+  max-width: 80%;
 }
 
-.gallery-item:hover .title{
-  opacity:1;
+.gallery-item:hover .title {
+  opacity: 1;
   animation: move-down .3s linear;
-  padding:1em;
-  width:100%;
+  padding: 1em;
+  width: 100%;
 }
 
 /* grid-column allows an element to span however many  columns you designate, in this case it is 3 for all elements with the w-3 class. This is helpful for a dynamic grid*/
-.w-3{
-  grid-column: span 3
+.w-3 {
+  grid-column: span 3;
 }
 
-.w-2{
-  grid-column: span 2
+.w-2 {
+  grid-column: span 2;
 }
 
-.w-1{
-  grid-column: span 1
+.w-1 {
+  grid-column: span 1;
 }
 
-.w-4{
-  grid-column: span 4
+.w-4 {
+  grid-column: span 4;
 }
 
-.w-5{
-  grid-column: span 5
+.w-5 {
+  grid-column: span 5;
 }
 
-.w-6{
-  grid-column: span 6
+.w-6 {
+  grid-column: span 6;
 }
 
 /*  grid-row allows an element to span however many  rows you designate, in this case it is 3 for all elements with the h-3 class. */
-.h-3{
-  grid-row: span 3
+.h-3 {
+  grid-row: span 3;
 }
 
-.h-1{
-  grid-row: span 1
+.h-1 {
+  grid-row: span 1;
 }
-.h-2{
-  grid-row: span 2
+
+.h-2 {
+  grid-row: span 2;
 }
-.h-4{
-  grid-row: span 4
+
+.h-4 {
+  grid-row: span 4;
 }
-.h-5{
-  grid-row: span 5
+
+.h-5 {
+  grid-row: span 5;
 }
-.h-6{
-  grid-row: span 6
+
+.h-6 {
+  grid-row: span 6;
 }
 
 /* lightbox */
-
 #lightbox {
-  position:fixed;
+  position: fixed;
   z-index: 1000;
   top: 0;
   width: 100%;
-	height: 100%;
-  background-color: rgba(0, 0, 0, .8);
+  height: 100%;
+	background-color: rgba(0, 0, 0, .8);
   display: none;
 }
 
-#lightbox.active{
+#lightbox.active {
   display: flex;
   justify-content: center;
-  align-items: center
+  align-items: center;
 }
 
 #lightbox img {
@@ -453,33 +509,46 @@ height: auto;
   background-color: gray;
   border: 3px solid black;
 }
-@keyframes move-down{
-  0%{
-    top:10%;
+
+@keyframes move-down {
+  0% {
+    top: 10%;
   }
-  50%{
-    top:35%
+
+  50% {
+    top: 35%
   }
-  100%{
-    top:50%
+
+  100% {
+    top: 50%
   }
 }
+
 @-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
 }
 
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
 }
+
 /* ==============================
 Medium devices (640px and larger)
 ================================= */
 @media only screen and (min-width: 640px) {
-
-	
-	header {
+  header {
     text-align: unset;
     padding: 30px 0 13px;
   }
@@ -488,87 +557,103 @@ Medium devices (640px and larger)
     width: auto;
     float: right;
     margin-top: 8px;
-	}
-	
-	nav > ol > li { 
-  display: inline-block;
   }
-	.navtoggle li:not(:last-child) {
-  display: inline-block;
-}
-.navtoggle li:last-child {
-  display: none;
-}
-	.navtoggle.responsive nav {
-  padding: 0;
-}
-.navtoggle.responsive ol {
-	padding-top: 0;
-}
-.navtoggle.responsive li  {
-  display: block;
-  padding:  0;
-  border-top: 0;
-}
-	#hero{
-	text-align: center;
-	}
-	#hero span {
-  display: block;
-}
-	.col-md-6 {
-  width: 50%;
-}
-	[class*="col-"] {
-  float: left;
-  padding: 15px;
-}
-	.row{
-		margin: 0 -10px;
-	}
-	.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-		logo{
-	max-width: 500px;
-}
 
-  .prev, .next,.text {font-size: 11px}
-	 .containerr{
-    grid-template-columns: repeat(2,1fr);
+  nav > ol > li {
+    display: inline-block;
   }
-.w-3,.w-4,.w-5,.w-6{
-    grid-column:span 1;
+
+  .navtoggle li:not(:last-child) {
+    display: inline-block;
   }
-	
+
+  .navtoggle li:last-child {
+    display: none;
+  }
+
+  .navtoggle.responsive nav {
+    padding: 0;
+  }
+
+  .navtoggle.responsive ol {
+    padding-top: 0;
+  }
+
+  .navtoggle.responsive li {
+    display: block;
+    padding: 0;
+    border-top: 0;
+  }
+
+  #hero {
+    text-align: center;
+  }
+
+  #hero span {
+    display: block;
+  }
+
+  .col-md-6 {
+    width: 50%;
+  }
+
+  [class*="col-"] {
+    float: left;
+    padding: 15px;
+  }
+
+  .row {
+    margin: 0 -10px;
+  }
+
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  logo {
+    max-width: 500px;
+  }
+
+  .prev .next .text {
+    font-size: 11px;
+  }
+
+  .containerr {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .w-3 .w-4 .w-5 .w-6 {
+    grid-column: span 1;
+  }
 }
 
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
 @media only screen and (min-width: 1024px) {
-	.container {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  .container {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #main {
+    display: block;
+  }
+
+  h4 {
+    font-size: 1.65em;
+    font-weight: 400;
+  }
+
+  p {
+    font-size: 1.25em;
+    font-weight: 400em
+  }
 }
-#main {
-  display: block;	
-}
-	h4 {
-  font-size: 1.65em;
-  font-weight: 400;
-}
-p{
-	font-size: 1.25em; 
-	font-weight: 400em
-}
-}
+
 /* ==============================
 X-large devices (1440px or larger)
 ================================= */
-@media only screen and (min-width: 1440px) {
-}
-
