--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h4 {
 
 p {
   font-size: 1.15em;
-  font-weight: 400em;
+  font-weight: 400;
 }
 
 img {
@@ -85,12 +85,12 @@ a:focus {
 .button {
   display: inline-block;
   background-color: #ff7f50;
-  color: white;
+  color: #2B0303;
   font-weight: 400;
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
-  border-bottom: 2px solid #994c30;
+  border-bottom: 2px solid #000;
   transition-duration: 0.2s;
   transition-property: opacity;
 }
@@ -154,7 +154,7 @@ header {
 
 .social svg {
   width: 50px;
-  hight: auto;
+  height: auto;
 }
 
 .copyright {
@@ -422,7 +422,7 @@ svg {
   font-size: 20px;
   pointer-events: none;
   z-index: 4;
-  transistion: .3s ease-in-out;
+  transition: .3s ease-in-out;
   -webkit-backdrop-filter: blur(5px) saturate(1.8);
   backdrop-filter: blur(5px) saturate(1.8);
   max-width: 80%;
@@ -650,7 +650,7 @@ Large devices (1024px or larger)
 
   p {
     font-size: 1.25em;
-    font-weight: 400em;
+    font-weight: 400;
   }
 }
 
